crates/aura-app/tests/ui/issue_semantic_operation_context_private.stderr
error[E0433]: failed to resolve: could not find `semantic_facts` in `workflows`
 --> tests/ui/issue_semantic_operation_context_private.rs:2:38
  |
2 |     let _ = aura_app::ui::workflows::semantic_facts::issue_semantic_operation_context;
  |                                      ^^^^^^^^^^^^^^ could not find `semantic_facts` in `workflows`
