crates/aura-app/tests/ui/issue_semantic_operation_context_private.rs
fn main() {
    let _ = aura_app::ui::workflows::semantic_facts::issue_semantic_operation_context;
}
